--- a/src/app/camera/camera.component.html
+++ b/src/app/camera/camera.component.html
@@ -30,19 +30,19 @@
         </div>
         <div class="p-1">
             <video #localVideo playsinline autoplay muted controls></video>
-            <video #remoteVideo1 playsinline autoplay controls></video>
-            <video #remoteVideo2 playsinline autoplay controls></video>
+            <!-- <video #remoteVideo1 playsinline autoplay controls></video> -->
+            <!-- <video #remoteVideo2 playsinline autoplay controls></video> -->
         </div>
-        <div class="p-2" style="padding-top: 20px;">
+        <!-- <div class="p-2" style="padding-top: 20px;">
             <video #remoteVideo3 playsinline autoplay controls></video>
             <video #remoteVideo4 playsinline autoplay controls></video>
             <video #remoteVideo5 playsinline autoplay controls></video>
-        </div>
-        <div style="width: 90%; padding: 20px; display: flex; flex-direction: row;justify-content: space-evenly"> 
-            <div style="align-items: flex-start; padding-top: 15px;">
-                <button #startButton [disabled]="startButtonDisabled" (click)="startCamera()">Start Webcam</button>
+        </div> -->
+        <div style="width: 100%; padding: 20px; display: flex; flex-direction: row;justify-content: space-between"> 
+            <div style="align-items: flex-start; padding: 15px;">
+                <button #startButton [disabled]="startButtonDisabled" (click)="startCamera()" class="btn btn-primary" style="max-height: 44px; min-width: max-content;">Start Webcam</button>
             </div>
-            <div>
+            <div style="padding-left: 15px;">
                 <form>
                     <mat-form-field class="speech-result-width">
                         <mat-label>Speech Input Result</mat-label>
@@ -51,17 +51,17 @@
                     </mat-form-field>
                 </form>
             </div>
-            <div style="align-items: flex-end;">
-                <ul style="margin-top: 0px;"><li *ngFor="let muser of userList">
+            <div style="align-items: flex-end; min-width: 600px;">
+                <ul style="float: right;"><li *ngFor="let muser of userList">
                     <span>{{muser}}</span>
-                    <button (click)="callUser(muser)"> Call</button>
+                    <button (click)="callUser(muser)" class="btn btn-primary" style="border-width: 2px; border-color: greenyellow"> Call</button>
                     <!-- <div class="custom-file form-group">
                         <input type="file" class="custom-file-input" id="file-input" (change)="fileSelectionEvent($event)">
                         <label class="custom-file-label" for="file-input" data-browse="Media-Ekle">Media Dosyası Ekle</label>
                     </div> -->
 <!--                    <button (click)="watchUser(muser)"> Watch</button>-->
-                    <button (click)="stopSample(muser)">Hang Up</button>
-                    <button (click)="sendData(muser)">Private Message</button>
+                    <button (click)="stopSample(muser)" class="btn btn-primary" style="border-width: 2px; border-color: greenyellow">Hang Up</button>
+                    <button (click)="sendData(muser)" class="btn btn-primary" style="border-width: 2px; border-color: greenyellow">Private Msg</button>
                 </li></ul>
             </div>
         </div>
@@ -72,10 +72,10 @@
         </div>
         <div class="chat">
             Chat:<br/>
-            <input #textBox [disabled]="false" id="textbox" type="text" name="text" placeholder="Say something meaningful..." autocomplete="off" (keyup)="handleKey($event)" cdkTextareaAutosize cdkAutosizeMinRows="2"
-            cdkAutosizeMaxRows="5">
-            <input #sendChat  [disabled]="chatBoxDisabled" type="button" id="send" name="send" value="Send" (click)="handleSendButton(textBox.value)">
-          </div>
+            <textarea #textBox [disabled]="false" id="textbox" type="text" name="text" placeholder="Say something meaningful..." autocomplete="off" (keyup)="handleKey($event)" cdkTextareaAutosize cdkAutosizeMinRows="2"
+            cdkAutosizeMaxRows="5"></textarea>
+            <input #sendChat class="btn btn-primary" [disabled]="chatBoxDisabled" type="button" id="send" name="send" value="Send" (click)="handleSendButton(textBox.value, '')" style="vertical-align: text-bottom;">
+        </div>
         <div style="height: auto;max-height: 400px; width: 800px;max-width: 800px;display: flex;flex-direction: column; margin-bottom: 200px;">
             <div style="flex-grow: 1; padding: 20px 30px; overflow: auto;">
                 <div #privateChatBox class="privateChatBox" style="display: flex; flex-direction: column;align-items: flex-start;"></div>
