--- a/src/app/files-list/files-list.component.html
+++ b/src/app/files-list/files-list.component.html
@@ -1,1 +1,1 @@
-<img *ngIf="imgUrl" [src]="sanitizer.bypassSecurityTrustUrl(_imgUrl)" [width]="width" [height]="height" alt="Asel"/>
+<img draggable="false" [src]="sanitizer.bypassSecurityTrustUrl(_imgUrl)" [width]="width" [height]="height" alt="Asel"/>
