--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,30 +1,42 @@
 <div class="newst" #dataContainer>
-<!-- *ngIf="!location.path().includes('/user')&&!location.path().includes('/allusers')&&!location.path().includes('/search')&&!location.path().includes('/admin')&&!location.path().includes('/upload')&&!location.path().includes('/talepler')
-            &&!location.path().includes('/auth')&&!location.path().includes('/money')&&!location.path().includes('/news/')" -->
+    <!-- <mat-tab-group mat-align-tabs="center">
+        <mat-tab (click)="onNavClick(links[0])" label="{{links[0]}}"></mat-tab>
+        <mat-tab (click)="onNavClick(links[1])" label="{{links[1]}}"></mat-tab>
+        <mat-tab (click)="onNavClick(links[2])" label="{{links[2]}}"></mat-tab>
+    </mat-tab-group> -->
+    
     <nav mat-tab-nav-bar>
-        <a mat-tab-link *ngFor="let link of links" (click)="onClick(link)" [active]="activeLink == link"
+        <a mat-tab-link *ngFor="let link of links" (click)="onNavClick(link)" [active]="activeLink == link"
             style="min-width: 33.3333%;"> {{link}} </a>
     </nav>
     <div *ngIf="activeLink!=null&&(activeLink.charAt(0)=='@'|| activeLink.charAt(0)=='#')"
         style="/*text-align: center;*/margin-left: 29%; padding-top: 17px;">
-        <button (click)="tagClick(activeLink)" matTooltip="Takip Etmek İçin Tıkla" style="border: 0;width: auto;height: 40px;color: white; background: red;
-border-radius: 22px;margin-right: 15px; margin-bottom: 10px;font-size: large;cursor: pointer">{{activeLink}} +
+        <button (click)="registerToTag(activeLink)" matTooltip="Takip Etmek İçin Tıkla" style="border: 0;width: auto;height: 40px;color: white; background: red;
+           border-radius: 22px;margin-right: 15px; margin-bottom: 10px;font-size: large;cursor: pointer">{{activeLink}} +
         </button>
     </div>
-    <div class="newsz">
+    <div class="newsm">
 
-        <div class="top-tags" style="font-weight: 600;color: #666666; padding-right: 0px" [ngStyle]="listStyle">
+        <div class="top-tags" style="font-weight: 600;color: #666666; padding-right: 0px" [ngStyle]="llistStyle">
             <h3 style="width: 200px; text-align: center">Trend Topics</h3>
             <a *ngFor="let tag of newsService.topTags | async"
                 (click)="onTagClick(tag.key);$event.stopPropagation();$event.preventDefault()"
                 style="width: 200px; cursor: pointer;"> {{tag.key}}</a>
  
         </div>
-        <div style="width: 617px">
-            <app-news-list *ngIf="!location.path().includes('/news')" [newsList]="newsService.newsList"
-                [activeLink]="activeLink" [orderBy]="orderBy"></app-news-list>
+        <div class="sliderrr-wrapper" [ngStyle]="carouselStyle">
+            <div class="bx-wrapper" [ngStyle]="miCarouselStyle">
+                <div #listContainer [ngStyle]="miCarouselStyle">
+                    <ul class="carousel-inner" #carousel [ngStyle]="carouselWrapStyle">
+                        <li class="media-image" *ngFor="let review of links;let i = index">
+                        <app-news-list [newsList]="i === 0 ? newsService.newsList : i === 1 ? newsService.tagsStreamList$ : newsService.peopleStreamList$"
+                        [activeLink]="activeLink" [currLink]="review"></app-news-list>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="reklam" [ngStyle]="listStyle">
+        <div class="reklam" [ngStyle]="rlistStyle">
             <app-ads></app-ads>
         </div>
     </div>
