--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,7 +22,7 @@
                            <form [formGroup]="loginForm">
                                <div class="form-group">
                                    <!-- <label>Email address</label>-->
-                                  <input type="email" formControlName="email" placeholder="Email Address" class="form-control">
+                                  <input type="email" formControlName="email" placeholder="example@example.com" class="form-control">
                                </div>
                               <div class="form-group">
                                    <!-- <label>Password</label>-->
