--- a/src/app/news-details/news-details.component.scss
+++ b/src/app/news-details/news-details.component.scss
@@ -1,7 +1,12 @@
 html {
   height: 100%
 }
-
+mat-form-field.speech-result-width{
+  width: auto;
+  min-width: 300px;
+  text-align: center;
+  display: inline-grid;
+}
 .modal {
   position: fixed;
   display: block; // table !important;
@@ -9,24 +14,28 @@ html {
   overflow-x: auto;
   width: 100%;
   height: 100%;
-//  padding-top: 85px;
+  z-index: 13;
 }
 .modal-body{
   width: 100%;
   left: 0%;
   margin-top: -40px;
 }
+.modal-backdrop{
+  z-index: 12;
+}
 .modal-header{
   width: 100%;
   margin-left: 0%;
   border-bottom: 0;
   padding: 20px 30px 0 0;
-  z-index: 1;
+  z-index: 11;
 }
 
 .modal-dialog {
   max-width: 822px;
   margin: 65px auto;
+  overflow-x: hidden;
 }
 
 .media-image{
@@ -52,7 +61,7 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  width: 3000px;
+  // width: 3000px;
 }
 
 .carousel-wrapper {
@@ -238,4 +247,12 @@ span.mat-button-wrapper {
 }
 .mat-menu-item{
   width: 120px;
+}
+mat-form-field.my_options{
+  max-width: 33%
+}
+mat-form-field.speech-result-width{
+  width: auto;
+  min-width: 300px;
+  text-align: center;
 }
