--- a/src/app/news-details/news-details.components.html
+++ b/src/app/news-details/news-details.components.html
@@ -10,10 +10,10 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div *ngIf="news$ as news">
+                <div id="newsContent" *ngIf="news$ as news">
                     <div id="ContentPlaceHolder1_mansetDiv" class="sliderrr-wrapper">
                         <div class="bx-wrapper">
-                            <div class="carousel-wrapper" [ngStyle]="carouselWrapperStyle">
+                            <div #carouselWrapper class="carousel-wrapper" [ngStyle]="carouselWrapperStyle">
                                 <ul class="carousel-inner" #carousel [ngStyle]="carouselWrapStyle">
                                     <li class="media-image" *ngFor="let review of news.mediaReviews"
                                         [ngSwitch]="review.has_medium">
@@ -51,10 +51,10 @@
                     <div class="preknow">
                         <span class='date pre'>{{news.date | date:'medium'}}</span>
                         <span class="pre bet">|</span>
-                        <span class="pre"><button
-                                (click)="onClose('/allusers/'+news.owner)">{{ news.owner }}</button></span>
+                        <span class="pre">
+                        <button (click)="onClose('/allusers/'+news.owner)" type="button" class="btn btn-primary" style="margin-top: -6px;">{{ news.owner }}</button></span>
                         <span class="pre bet">|</span>
-                        <span class="pre" (click)="setSocial();">Paylaş
+                        <span class="pre" style="cursor: pointer;" (click)="setSocial();">Paylaş
                         </span>
                         <span class="pre bet">|</span>
                         <span class="pre"> {{ newsCounts.get(news.id) }}</span>
@@ -64,17 +64,53 @@
                         <span class="text" *ngIf="news.topic.charAt(0)!=='#'">{{news.topic.split('#')[0]}}</span>
                         <span class="text" *ngFor="let tag of news.tags; let i = index">
                             <a class="tag" (click)="onTagClick(tag);$event.stopPropagation();$event.preventDefault()"
-                                style="font-weight: 600;color: #666666"> {{tag}} </a>
+                                style="font-weight: 600;color: #666666; cursor: pointer;"> {{tag}} </a>
                             {{news.topic.split('#')[i + 1].replace(news.tags[i].substring(1), '')}}
                         </span>
                     </h2>
-                    <div [innerHTML]="news.summary" style="padding-top: 20px"></div>
-                    <div style="margin-bottom: 20px">
+                    <!-- <div>
+                        <iframe #myframe id="youtu" width='560' height='315' src="" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen></iframe>
+                    </div> -->
+                    <div id="mihtml" style="padding-top: 20px"></div>
+                    <div id="newsTags" style="margin-bottom: 20px">
                         <label *ngFor="let tag of news.tags"><a> {{tag}} ; </a></label>
                     </div>
-
                 </div>
-
+                <div class="chat">
+                    Comments:<br/>
+                    <textarea #textBox id="textbox" type="text" name="text" placeholder="Say something meaningful..." autocomplete="off" cdkTextareaAutosize cdkAutosizeMinRows="2"
+                    cdkAutosizeMaxRows="5" style="width: 85%; box-sizing: content-box"></textarea>
+                    <button style="vertical-align: text-bottom;" type="button" class="btn btn-primary" (click)="handleSendButton(textBox.value)">Send</button>
+                </div> 
+                <div style="display: flex; justify-content: space-evenly; width: 100%; margin-top: 15px;">
+                    <mat-form-field class="my-options">
+                        <mat-select placeholder="Select your language"
+                                    [(ngModel)]="currentLanguage" [disabled]="recognizing">
+                          <mat-option *ngFor="let language of languages" [value]="language" (click)="onSelectLanguage(language)">
+                            {{language}}
+                          </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div style="width: 90%; padding: 20px; display: flex; flex-direction: row;justify-content: space-evenly"> 
+                    <div style="align-items: flex-start; padding-top: 20px;">
+                        <button #startButton [disabled]="startButtonDisabled" type="button" class="btn btn-primary" (click)="startCamera()">Start Microphone</button>
+                    </div>
+                    <div style="align-items: flex-end;">
+                        <form>
+                            <mat-form-field class="speech-result-width">
+                                <mat-label>Speech Input Result</mat-label>
+                              <textarea #speechTextBox matInput [value]="(speechMessages|async)?.transcript" placeholder="Speech Input Result" disabled="true" cdkTextareaAutosize cdkAutosizeMinRows="2"
+                              cdkAutosizeMaxRows="5" style="text-align: center;"></textarea>
+                            </mat-form-field>
+                        </form>
+                    </div>
+                </div>
+                <div style="height: auto;max-height: 400px; width: 800px;max-width: 800px;display: flex;flex-direction: column; margin-bottom: 200px;">
+                    <div style="flex-grow: 1; padding: 20px 30px; overflow: auto;">
+                        <div #publicChatBox class="publicChatBox" style="display: flex; flex-direction: column;align-items: flex-end;"></div>    
+                    </div>
+                </div>
             </div>
             <div class="modal-footer" style="justify-content: space-between;">
                 <app-ngbd-modal-stacked></app-ngbd-modal-stacked>
