--- a/src/app/news-list/news-list.component.html
+++ b/src/app/news-list/news-list.component.html
@@ -1,6 +1,6 @@
 <div class="news">
     <ul class="items">
-        <li *ngFor="let news of newsList | async" class="news-list">
+        <li *ngFor="let news of newsList$ | async" class="news-list">
             <a [routerLink]="[ news.newsId]">
                 <app-files-list [thumbName]="getName(news.thumb)" style="height: 109px"></app-files-list>
                 <div style="padding-left: 10px;">
