--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -29,17 +29,17 @@
                 </div>
                 <div class="form-group">
 <!--                    <label>Email Address</label>-->
-                    <input type="email" formControlName="email" placeholder="Email Address" class="form-control">
+                    <input type="email" formControlName="email" placeholder="example@example.com" class="form-control" required>
                 </div>
                 <div style="margin-bottom: -5px" class="form-group">
 <!--                    <label>Password</label>-->
-                    <input type="password" class="form-control" formControlName="password" placeholder="Password">
+                    <input type="password" class="form-control" formControlName="password" placeholder="Password" required>
                     <label class="error">{{errorMessage}}</label>
                     <label class="success">{{successMessage}}</label>
                 </div>
                 <div class="form-group">
 <!--                    <label>Confirm Password</label>-->
-                    <input type="password" class="form-control" formControlName="password2" placeholder="Confirm Password">
+                    <input type="password" class="form-control" formControlName="password2" placeholder="Confirm Password" required>
                     <label class="error">{{errorMessage}}</label>
                     <label class="success">{{successMessage}}</label>
                 </div>
@@ -47,7 +47,7 @@
                     <div class="alert-danger errormessageadduser" *ngIf="registerForm.hasError('mismatchedPasswords')">Passwords do not match</div>
                 </div>
                 <div style="float: left; padding: 10px;">
-                    <mat-checkbox formControlName="sozlesme">Sözleşmeyi Okudum, Onaylıyorum!</mat-checkbox>
+                    <mat-checkbox formControlName="sozlesme" required>Sözleşmeyi Okudum, Onaylıyorum!</mat-checkbox>
                 </div>
                 <button [disabled]="!registerForm.valid" type="submit" (click)="tryRegister(registerForm.value)" class="btn btn-block" style="background-color: #222222;color: white">Register
                 </button>
