--- a/src/app/multi-files-upload/multi-files-upload.component.css
+++ b/src/app/multi-files-upload/multi-files-upload.component.css
@@ -87,7 +87,7 @@ table{
     width: 100%;
 }
 #mifiles {
-    width: -webkit-fill-available;
+    width: 100%;
     border: none;
     background-color: white;
     cursor: grabbing;
