--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="searchForm" style="overflow: hidden">
         <mat-form-field style="width: 100%;line-height: 1.7 !important;" class="mearch">
-            <label style="vertical-align: -webkit-baseline-middle;">Search
+            <label style="vertical-align: sub;">Search
             <input matInput type="search" class="form-control"
             [formControl]="searchField" #myInput></label>
             <!-- <mat-icon matSuffix style="font-size: 1.2em">search</mat-icon> -->
