--- a/src/app/news-details/news-details.components.html
+++ b/src/app/news-details/news-details.components.html
@@ -111,7 +111,7 @@
         <div
             style="height: auto;max-height: 400px; width: 800px;max-width: 800px;display: flex;flex-direction: column; margin-bottom: 200px;">
             <div style="flex-grow: 1; padding: 20px 30px; overflow: auto;">
-                <div #publicChatBox class="publicChatBox"
+                <div #publicChatBox class="publicChatBox" contenteditable="true"
                     style="display: flex; flex-direction: column;align-items: flex-end;"></div>
             </div>
         </div>
