--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,10 +1,26 @@
 <form [formGroup]="searchForm" style="overflow: hidden">
-        <mat-form-field style="width: 100%;line-height: 1.7 !important;" class="mearch">
-            <label style="vertical-align: sub;">Search
-            <input matInput type="search" class="form-control"
-            [formControl]="searchField" #myInput></label>
-            <!-- <mat-icon matSuffix style="font-size: 1.2em">search</mat-icon> -->
-        </mat-form-field>
+    <table style="width: 100%;line-height: 1.7 !important;">
+        <tbody>
+            <tr>
+                <td class="fh">
+                    <mat-form-field style="width: 100%;line-height: 1.7 !important;" class="mearch">
+                        <label style="vertical-align: sub;">
+                        <input matInput type="search" aria-label="Search" placeholder="Search" class="form-control"[formControl]="searchField" #myInput>
+                        </label>
+                        <!-- <mat-icon matSuffix style="font-size: 1.2em">search</mat-icon> -->
+                    </mat-form-field>
+                </td>
+                <td class="gh">
+                  <div id="box">
+                      <select class="mybox" (change)="onClick(this.links[$event.target.value-1])" #mySelect>
+                          <option value="1">{{links[0]}}</option>
+                          <option value="2">{{links[1]}}</option>
+                      </select>
+                  </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </form>
 <nav mat-tab-nav-bar>
     <a mat-tab-link *ngFor="let link of links" (click)="onClick(link)" [active]="_activeLink == link"
