--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -33,7 +33,7 @@
 }
 .form-control {
   display: inline-block;
-  width: 75%;
+  width: 100%;
   height: calc(1.5em + .75rem + 2px);
   padding: .375rem .75rem;
   font-size: 1rem;
@@ -43,11 +43,13 @@
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
+  border-right: 0;
   border-radius: .25rem;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 ::ng-deep .mearch .mat-form-field-underline {
   bottom: 5px !important;
+  height: 0 !important;
 }
 ::ng-deep .mearch .mat-form-field-wrapper {
   padding-bottom: 5px !important;
@@ -55,4 +57,37 @@
 ::ng-deep .mearch .mat-form-field-infix {
   padding: .5em 0;
   border-top: .01em solid transparent;
+}
+::ng-deep .mearch .mat-form-field-label {
+  top: 2em !important;
+}
+.mybox{
+  border-radius: 0;
+  margin: 0;
+  height: 38px;
+  padding: 0 30px 0 16px;
+  background-color: transparent;
+  border: 1px solid #ced4da;
+}
+#box{
+  height: calc(1.5em + .75rem + 2px);
+  border-left: 0;
+  border-radius: 0;
+  box-sizing: border-box;
+  padding: 1px 0;
+  background: #fff;
+  line-height: 1.7 !important;
+  margin-left: -2px;
+}
+.gh {
+  width: 1%;
+  vertical-align: middle;
+  min-width: 3px;
+}
+.fh{
+  border-right: none;
+}
+table{
+  border-collapse: collapse;
+  border-spacing: 0;
 }
