--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="newst" #dataContainer [style.minHeight]="hght+'px'">
-    <nav mat-tab-nav-bar>
+    <!-- <nav mat-tab-nav-bar>
         <a mat-tab-link *ngFor="let link of links" (click)="onNavClick(link)" [active]="activeLink == link"
             style="min-width: 33.3333%;"> {{link}} </a>
-    </nav>
+    </nav> -->
     <div *ngIf="activeLink!=null&&(activeLink.charAt(0)=='@'|| activeLink.charAt(0)=='#')"
         style="/*text-align: center;*/margin-left: 29%; padding-top: 17px;">
         <button (click)="registerToTag(activeLink)" matTooltip="Takip Etmek İçin Tıkla" style="border: 0;width: auto;height: 40px;color: white; background: red;
@@ -21,7 +21,7 @@
         <div class="sliderrr-wrapper" [ngStyle]="carouselStyle">
             <div class="bx-wrapper" [ngStyle]="miCarouselStyle">
                 <div #listContainer [ngStyle]="miCarouselStyle">
-                    <ul class="carousel-inner" #carousel [ngStyle]="carouselWrapStyle">
+                    <ul #carousel class="carousel-inner" [ngStyle]="carouselWrapStyle">
                         <li class="media-image" *ngFor="let review of links;let i = index">
                             <app-news-list
                                 [newsList]="i === 0 ? newsService.newsStreamList$ : i === 1 ? newsService.tagsStreamList$ : newsService.peopleStreamList$"
