--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,19 +1,44 @@
-<mat-card class="example-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image" [style.background-image]="url"></div>
-      <mat-card-title>Shiba Inu</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+<mat-card class="example-card" [routerLink]="[ news.newsId ]" [state]="{loggedID: this.userService.loggedUser?this.userService.loggedUser.id:''}">
+    <mat-card-header style="display: flex;">
+      <div mat-card-avatar class="example-header-image" [style.background-image]="_url"></div>
+      <div>
+        <mat-card-title>Shiba Inu</mat-card-title><br>
+        <mat-card-subtitle>
+          <span class='date' [style.font-size.px]="fontSize">{{news.date | date:'medium'}}</span>
+        </mat-card-subtitle>
+      </div>
+      <div style="margin-left: auto;">
+        <mat-menu #appMenu="matMenu" xPosition="before">
+          <button mat-menu-item >Logout</button>
+          <button mat-menu-item >Settings</button>
+          <button mat-menu-item >Account</button>
+          <button mat-menu-item>Help</button>
+        </mat-menu>
+        <button class="menu" [matMenuTriggerFor]="appMenu" (click)="$event.stopPropagation();$event.preventDefault()">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" fill="currentColor" class="mercado-match" width="24" height="24" focusable="false">
+            <path d="M14 12a2 2 0 11-2-2 2 2 0 012 2zM4 10a2 2 0 102 2 2 2 0 00-2-2zm16 0a2 2 0 102 2 2 2 0 00-2-2z"></path>
+          </svg>
+        </button>
+      </div>
     </mat-card-header>
-    <img mat-card-image [src]="srcUrl" alt="Photo of a Shiba Inu">
     <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
+      <app-files-list [thumbName]="'amedium-' + (news.thumb ? news.thumb : 'bae.jpg')" style="margin-top: 10px;"></app-files-list>
+      <div [style.height.px]="height" style="padding-left: 10px; width: auto;">
+        <h4 [style.height]="'auto'">
+            <span class="text" *ngIf="news.topic.charAt(0)!=='#'">{{news.topic.split('#')[0]}}</span>
+            <span class="text" *ngFor="let tag of news.topics; let i = index">
+                <a class="tag" (click)="onTagClick(tag);$event.stopPropagation();$event.preventDefault()"
+                    style="font-weight: 600;color: #666666"> {{tag}} </a>
+                {{news.topic.split('#')[i + 1].replace(news.topics[i].substring(1), '')}}
+            </span>
+        </h4>
+    </div>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
+      <button class="butto ripple button-outline">LIKE</button>
+      <button class="butto ripple button-outline">SHARE</button>
+      <button class="butto ripple button-outline" (click)="onClick('/allusers/'+ news.newsOwner, news.newsOwnerId)"
+      [disabled]="this.userService.loggedUser && news.newsOwnerId === this.userService.loggedUser.id" style="float: right; border: none;">
+          @{{news.newsOwner}} :: {{news.count}} :: {{newsCounts.get(news.newsId)}}</button>
     </mat-card-actions>
   </mat-card>
