--- a/src/app/profile-card/profile-card.component.scss
+++ b/src/app/profile-card/profile-card.component.scss
@@ -22,15 +22,15 @@
   width: 100px;
 }
 
-.follow{
-  border: 0;
-  width: 120px;
-  height: 30px;
-  color: white;
-  background: red;
-  border-radius: 22px;
-  font-size: medium;
-}
+// .follow{
+//   border: 0;
+//   width: 120px;
+//   height: 30px;
+//   color: white;
+//   background: red;
+//   border-radius: 22px;
+//   font-size: medium;
+// }
 .mat-icon-button, .mat-icon{
   width: 46px;
   height: 46px;
