--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <!-- <br *ngIf="newsService.newsStreamCounts$ | async"> -->
         <app-no-logged-nav [loggedinUser]="loggedinUser" [ngStyle]="searchWrapperStyle()"></app-no-logged-nav>
     <!-- </mat-toolbar> -->
-    <div class="example-sidenav-container">
+    <div class="example-sidenav-container" style="background-color: #e9e9e9;">
         <router-outlet></router-outlet>
     </div>
 </div>
