--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -14,6 +14,7 @@
     line-height: 1.5;
     // max-width: 374.5px;
     padding-left: 125px;
+    padding-top: 17px;
   }
 
   .mat-toolbar-single-row{
@@ -38,8 +39,8 @@
   }
 
   .mat-icon-button, .mat-icon{
-    width: 66px;
-    height: 66px;
+    width: 55px;
+    height: 55px;
     line-height: 60px !important;
     font-size: inherit;
   }
@@ -91,6 +92,7 @@
   float: left;
   width: 100%;
   height: 100%;
+  margin-top: 10px;
 }
 ::ng-deep .mat-ink-bar {
   background: purple !important;
