--- a/src/app/news-list/news-list.component.html
+++ b/src/app/news-list/news-list.component.html
@@ -1,8 +1,9 @@
 <div class="news">
     <ul class="items">
         <li *ngFor="let news of newsList$ | async;trackBy: byId" class="news-list">
-            <a [routerLink]="[ news.newsId ]" [state]="{loggedID: this.userService.loggedUser?this.userService.loggedUser.id:''}">
-                <app-files-list [thumbName]="'thumb-kapak-' + (news.thumb ? news.thumb : 'bae.jpg')"></app-files-list>
+            <!-- <a [routerLink]="[ news.newsId ]" [state]="{loggedID: this.userService.loggedUser?this.userService.loggedUser.id:''}"> -->
+              <app-post [news]="news" style="width: 100%;"></app-post>
+                <!-- <app-files-list [thumbName]="'thumb-kapak-' + (news.thumb ? news.thumb : 'bae.jpg')"></app-files-list>
                 <div [style.height.px]="height" style="padding-left: 10px; width: 100%;">
                     <h4 [style.height.px]="thumbHeight">
                         <span class='date' [style.font-size.px]="fontSize">{{news.date | date:'medium'}}</span>
@@ -28,8 +29,8 @@
                             style="margin-left: 0; color: #A9A9A9; font-size: 12px; font-weight: bold">
                             @{{news.newsOwner}} :: {{news.count}} :: {{newsCounts.get(news.newsId)}}</a>
                     </label>
-                </div>
-            </a>
+                </div> -->
+            <!-- </a> -->
         </li>
     </ul>
 </div>
