--- a/src/app/no-logged-nav/no-logged-nav.component.html
+++ b/src/app/no-logged-nav/no-logged-nav.component.html
@@ -1,28 +1,48 @@
 <mat-toolbar color="primary" class="example-toolbar">
   <button (click)="btnClick('/home')" [ngStyle]="toolbarStyle" class="mat-icon-button">
-    <div style="height: 66px;display: -webkit-box;width: 100%;justify-content: space-evenly;">
+    <div style="height: 55px;display: -webkit-box;width: 100%;justify-content: space-evenly;">
       <div class="image"></div>
-      Büşra Nur
     </div>
   </button>
+  <div [style.marginLeft.%]="checkMedia ? 0 : 0" [style.width.%]="checkMedia ? 0 : 39"
+    style="background-color: darkmagenta;min-width: 39%;">
+    <!-- <nav mat-tab-nav-bar>
+      <a mat-tab-link *ngFor="let link of newsService.links" (click)="navClick(link)" [active]="activeLink == link"
+          style="min-width: 33.3333%;"> {{link}} </a>
+  </nav> -->
+    <button #buttons mat-icon-button (click)="navClick(this.newsService.links[0])" class="active mat-icon-button"
+      matTooltip="search new contents" aria-label="Center Align" autofocus>
+      <mat-icon>home</mat-icon>
+    </button>
+    <button #buttons mat-icon-button (click)="navClick(this.newsService.links[1])" class="mat-icon-button" style="border-left: 1px solid #6d6d6d;border-right: 1px solid #6d6d6d;"
+      matTooltip="search new contents" aria-label="Center Align" [style.marginRight.%]="checkMedia ? 0 : 0" autofocus>
+      <mat-icon>people</mat-icon>
+    </button>
+    <button #buttons mat-icon-button (click)="navClick(this.newsService.links[2])" class="mat-icon-button"
+      matTooltip="search new contents" aria-label="Center Align" [style.marginRight.%]="checkMedia ? 0 : 0" autofocus>
+      <mat-icon>filter</mat-icon>
+    </button>
+  </div>
+  <div style="max-width: 30%; min-width: 30%; height: max-content; display: flex; justify-content: center;">
   <br *ngIf="newsService.newsStreamCounts$ | async">
-  <div *ngIf="!(loggedinUser|async)" [ngSwitch]="this.checkMedia">
-    <button *ngSwitchCase="false" class="login" (click)="btnClick('/search')">Sitede Ara</button>
+  <div *ngIf="!(loggedinUser|async)" [ngSwitch]="this.checkMedia" style="display: flex;justify-content: center;">
+    <button *ngSwitchCase="false" class="login" (click)="btnClick('/search')" aria-label="Center Align">Ara</button>
     <button *ngSwitchCase="true" mat-icon-button (click)="btnClick('/search')" class="mat-icon-button"
       matTooltip="search new contents" aria-label="Center Align">
       <mat-icon>search</mat-icon>
     </button>
-    <button *ngSwitchCase="false" class="login" (click)="btnClick('/login')">Kullanıcı Girişi</button>
+    <button *ngSwitchCase="false" class="login" (click)="btnClick('/login')" aria-label="Center Align">Giriş</button>
     <button *ngSwitchCase="true" mat-icon-button (click)="btnClick('/login')" class="mat-icon-button"
       matTooltip="search new contents" aria-label="Center Align">
-      <mat-icon>home</mat-icon>
+      <mat-icon>vpn_key</mat-icon>
     </button>
-    <button *ngSwitchCase="false" class="register" (click)="btnClick('/register')">Kayıt Ol</button>
+    <button *ngSwitchCase="false" class="register" (click)="btnClick('/register')" aria-label="Center Align">Kayıt</button>
     <button *ngSwitchCase="true" mat-icon-button (click)="btnClick('/register')" class="mat-icon-button"
       matTooltip="search new contents" aria-label="Center Align">
-      <mat-icon>queue</mat-icon>
+      <mat-icon>group_add</mat-icon>
     </button>
   </div>
-  <app-logged-nav [logged]="loggedinUser|async" [style.marginRight.%]="this.checkMedia ? 0 : 15" style="width: fit-content;">
+  <app-logged-nav [logged]="loggedinUser|async" [style.marginRight.%]="this.checkMedia ? 0 : 0">
   </app-logged-nav>
+</div>
 </mat-toolbar>
