--- a/src/app/logged-nav/logged-nav.component.html
+++ b/src/app/logged-nav/logged-nav.component.html
@@ -14,7 +14,7 @@
     class="mat-icon-button" matTooltip="search new contents" aria-label="Center Align">
     <mat-icon>search</mat-icon>
   </button>
-  <button id="upload" *ngSwitchCase="false" matTooltip="add new contents" class="mat-icon-button"
+  <button id="upload" *ngSwitchCase="false" matTooltip="add new contents" class="mat-icon-button" aria-label="Right Align"
     (click)="btnClick('/upload')">
     <mat-icon>add_shopping_cart</mat-icon>
   </button>
