--- a/src/app/no-logged-nav/no-logged-nav.component.html
+++ b/src/app/no-logged-nav/no-logged-nav.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="example-toolbar">
-  <button (click)="btnClick('/home')" [ngStyle]="toolbarStyle" class="mat-icon-button">
+  <button (click)="btnClick('/home')" [ngStyle]="toolbarStyle" class="mat-icon-button" aria-label="Left Align">
     <div style="height: 55px;display: -webkit-box;width: 100%;justify-content: space-evenly;">
       <div class="image"></div>
     </div>
