--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,8 +82,8 @@ button:disabled {
     0 2px 15px 0 rgba(29, 39, 231, .1)
 }
 .butto:hover {
-  background-color: #d824ff;
-  border-color: #d824ff;
+  background-color: #c200ec;
+  border-color: #c200ec;
   color: #fff;
 }
 .butto:focus{
@@ -91,5 +91,5 @@ button:disabled {
 }
 .button-outline {
   background-color: transparent;
-  color: #d824ff;
+  color: #c200ec;
 }
