--- a/src/app/news-list/news-list.component.scss
+++ b/src/app/news-list/news-list.component.scss
@@ -20,6 +20,8 @@
   padding: 10px;
   margin: 10px 0 20px;
   background-color: white;
+}
+.shadow{
   box-shadow: 10px 0px 5px 0px rgba(0, 0, 0, 0.2), 10px 0px 10px 0px rgba(0, 0, 0, 0.14), 10px 0px 14px 0px rgba(0, 0, 0, 0.12);
 }
 
