--- a/src/app/edit-tags-list/edit-tags-list.component.html
+++ b/src/app/edit-tags-list/edit-tags-list.component.html
@@ -1,16 +1,7 @@
-<div *ngIf="booled" style="margin-top: 50px; text-align: center">
-  <div *ngFor="let tag of _tags|async" style="text-align: center">
-    <button *ngIf="!(isPub|async)" (click)="removeTag(tag)" type="button" class="follow btn btn-success btn-block">
-      <div layout="row" layout-align="left" flex>
-        <label>{{tag}}</label>
-        <label style="float: right">--</label>
-      </div>
-    </button>
-    <button *ngIf="(isPub|async)" (click)="addTag(tag)" type="button" class="follow btn btn-success btn-block">
-      <div layout="row" layout-align="left" flex>
-        <label>{{tag}}</label>
-        <label style="float: right">+</label>
-      </div>
-    </button>
+<div *ngIf="booled" style="padding-top: 50px; text-align: center; min-height: 50px;">
+  <div *ngFor="let tag of _tags|async" style="text-align: center; display: flex;">
+    <label>#{{tag}}</label>
+    <button #followButton (click)="pubs&&checkTag(tag)?addTag(tag):removeTag(tag)" type="button" class="butto ripple button-outline">
+      {{pubs&&checkTag(tag)?'Takip Et':'Takibi Kes'}}</button>
   </div>
 </div>
