--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -91,3 +91,8 @@ table{
   border-collapse: collapse;
   border-spacing: 0;
 }
+.mat-tab-links {
+  max-width: 619px;
+  border: 1px solid #e6e6e6;
+  margin: 0 auto;
+}
