--- a/src/app/news-list/news-list.component.scss
+++ b/src/app/news-list/news-list.component.scss
@@ -15,7 +15,11 @@
   padding: 10px;
   margin: 10px 0 20px;
   background-color: white;
+  transition: all 0.2s ease-in-out;
 }
 .shadow{
   box-shadow: 10px 0px 5px 0px rgba(0, 0, 0, 0.2), 10px 0px 10px 0px rgba(0, 0, 0, 0.14), 10px 0px 14px 0px rgba(0, 0, 0, 0.12);
+}
+.news-list:hover {
+  transform: translateY(-1px);
 }
