--- a/src/app/post/post.component.scss
+++ b/src/app/post/post.component.scss
@@ -17,7 +17,7 @@ span.date {
   max-height: 12px;
 }
 span.text{
-  font-size: 15px;
+  font-size: 18px;
   max-height: 81px;
 }
 .news-list h4 {
@@ -40,7 +40,7 @@ span.text{
   border-radius: 50%;
   background-color: #f3f3f3;
 }
-a{
+a.tag{
   cursor: grabbing;
 }
 .example-card{
