--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,7 +1,7 @@
-<mat-card class="example-card" [routerLink]="[ news.newsId ]" [state]="{loggedID: (user|async)?.id}">
+<mat-card class="example-card" [routerLink]="[ news.newsId ]">
     <mat-card-header style="display: flex;">
-      <button class="butto ripple button-outline" (click)="onClick('/allusers/'+ news.newsOwner, news.newsOwnerId);$event.stopPropagation();$event.preventDefault()"
-      [disabled]="isDisabled(news.newsOwnerId)" style="float: right; border: none;display: flex;padding: revert;">
+      <button #miButton (mouseover)="over()" class="butto ripple button-outline" (click)="onClick('/allusers/'+ news.newsOwner, news.newsOwnerId);$event.stopPropagation();$event.preventDefault()"
+      style="float: right; border: none;display: flex;padding: revert;">
       <div mat-card-avatar class="example-header-image" [style.background-image]="_url"></div>
       <div>
         <mat-card-title>{{news.newsOwner}}</mat-card-title><br>
@@ -40,9 +40,6 @@
     <mat-card-actions>
       <button class="butto ripple button-outline">LIKE</button>
       <button class="butto ripple button-outline">SHARE</button>
-      <!-- <button class="butto ripple button-outline" (click)="onClick('/allusers/'+ news.newsOwner, news.newsOwnerId);$event.stopPropagation();$event.preventDefault()"
-      [disabled]="isDisabled(news.newsOwnerId)" style="float: right; border: none;">
-          @{{news.newsOwner}} :: {{news.count}} :: {{newsCounts.get(news.newsId)}}</button> -->
     </mat-card-actions>
-    
+    <app-comments [url]="_url"></app-comments>
   </mat-card>
