--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,8 @@ body {
   margin: 0;
 }
 a:hover {
-  color: #353535;
+  color: #c200ec !important;
+  box-shadow: 0 4px 17px #9f9f9f; 
 }
 div.mini{ display: none !important;}
 div.tright>div{ width: 100% !important;}
@@ -80,6 +81,8 @@ button:disabled {
   background-color: #c200ec;
   border-color: #c200ec;
   color: #fff;
+  transform: translateY(-3px);
+  box-shadow: 0 4px 17px #9f9f9f; 
 }
 .butto:focus{
   border: 2px solid #c978dd !important;
