--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-md-offset-6">
-                        <button id="kaydet3" [style.width.px]="data.header$"  type="button" class="butto ripple button-outline" (click)="tryGoogleLogin()">Login with Google</button>
+                        <button id="kaydet3" [style.width.px]="data.header$"  type="button" class="butto ripple button-outline" (click)="triedGoogleLogin()">Login with Google</button>
                     </div>
                 </div>
                 <div class="row">
