--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="example-container" [class.example-is-mobile]="this.checkMedia()">
-    <app-no-logged-nav [loggedinUser]="loggedinUser" [ngStyle]="searchWrapperStyle()"></app-no-logged-nav>
+    <app-no-logged-nav [loggedinUser]="_loggedinUser" [ngStyle]="searchWrapperStyle()"></app-no-logged-nav>
     <div class="example-sidenav-container" style="background-color: #e9e9e9;">
         <router-outlet></router-outlet>
     </div>
