--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -41,5 +41,5 @@
       <button class="butto ripple button-outline">LIKE</button>
       <button class="butto ripple button-outline">SHARE</button>
     </mat-card-actions>
-    <app-comments [url]="_url"></app-comments>
+    <app-comments [url]="_url" [newsId]="news.newsId"></app-comments>
   </mat-card>
