--- a/src/app/news-details/news-details.components.html
+++ b/src/app/news-details/news-details.components.html
@@ -69,9 +69,9 @@
             <div id="newsTags" style="margin-bottom: 20px">
                 <label *ngFor="let tag of news.tags"><a> {{tag}} ; </a></label>
             </div>
-            <app-comments [url]="'url(' + news.ownerUrl + ')'"></app-comments>
+            <app-comments [url]="'url(' + news.ownerUrl + ')'" [newsId]="news.id"></app-comments>
         </div>
-        <div style="display: flex; justify-content: space-evenly; width: 100%; margin-top: 25px;">
+        <!-- <div style="display: flex; justify-content: space-evenly; width: 100%; margin-top: 25px;">
             <mat-form-field class="my-options">
                 <mat-label>Select your language</mat-label>
                 <mat-select role="listbox" [(value)]="currentLanguage">
@@ -102,7 +102,7 @@
             <div style="flex-grow: 1; padding: 20px 30px; overflow: auto;">
                 <div #publicChatBox class="publicChatBox" contenteditable="true" style="display: flex; flex-direction: column;align-items: flex-end;"></div>
             </div>
-        </div>
+        </div> -->
     </section>
     <footer id="modal-footer" [ngStyle]="wideStyle" style="display: flex;justify-content: space-between;">
         <!-- <app-ngbd-modal-stacked></app-ngbd-modal-stacked> -->
